providers/proxy: add option to skip authentication for paths matching regular expressions
