# passbook/providers/proxy/models.py
@@ -49,6 +49,15 @@ class ProxyProvider(OutpostModel, OAuth2Provider):
 
     cookie_secret = models.TextField(default=get_cookie_secret)
 
+    skip_path_regex = models.TextField(
+        default="",
+        blank=True,
+        help_text=_((
+            "Regular expression for which authentication is not required. "
+            "Each new line is interpreted as a new Regular Expression."
+        ))
+    )
+
     certificate = models.ForeignKey(
         CertificateKeyPair, on_delete=models.SET_NULL, null=True, blank=True,
     )
